<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/white">

    <RadioGroup
        android:id="@+id/filterRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <View android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <RadioButton
            android:id="@+id/filterAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/option_all" />

        <View android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <RadioButton
            android:id="@+id/filterUnread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_unread" />

        <View android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <RadioButton
            android:id="@+id/filterRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_read" />

        <View android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

    </RadioGroup>

    <ListView
        android:id="@+id/cloudPageListView"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:dividerHeight="3.0sp"
        android:divider="@drawable/list_divider"
        android:layout_below="@id/filterRadioGroup" />

</RelativeLayout>